<resources>
    <string name="app_name">BluetoothAlertDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ga_trackingId">UA-47365735-1</string>
    <string name="DB_NAME">BleScanner.sqlite</string>
    <string name="DB_PATH">/data/data/com.macdom.ble.blescanner/databases/</string>
    <string name="strsave">SAVE</string>
    <string name="strback">BACK</string>
    <string name="supportemail">support@bluepixeltech.in</string>
    <string name="feedbackemail">blescanner@bluepixeltech.in</string>
    <string name="strNo_nearby_BLE">No nearby BLE devices</string>
    <string name="strVersion">Version</string>
    <string name="connect">CONNECT</string>
    <string name="not_available">n/a</string>
    <string name="scan">SCAN</string>
    <string name="stopscanning">STOP SCANNING</string>
    <string name="bluetoothenable">Turn on Bluetooth to scan nearby devices.</string>
    <string name="home">HOME</string>
    <string name="peripheral">PERIPHERAL</string>
    <string name="scanner">SCANNER</string>
    <string name="transmitter">TRANSMITTER</string>
    <string name="settings">SETTINGS</string>
    <string name="strDeviceName1">DeviceName1</string>
    <string name="nearby">Near By</string>
    <string name="history">History</string>
    <string name="favorite">Favorites</string>
    <string name="strperipheraldevice">Peripheral Devices</string>
    <string name="strservicescount">Services:</string>
    <string name="strcharcount">Characterstics:</string>
    <string name="strnewdevice">Add New Device</string>
    <string name="straddservice">Add Service</string>
    <string name="strdevicename">DeviceName</string>
    <string name="straddchar">Add Characterstics</string>
    <string name="strservicename">Name</string>
    <string name="strserviceuuid">UUID</string>
    <string name="strcharproperty">Property:</string>
    <string name="strread">Read</string>
    <string name="strwrite">Write</string>
    <string name="strnotify">Notify</string>
    <string name="strCompanyName">BLUEPIXEL TECHNOLOGIES LLP</string>
    <string name="strCompanyDesc">We develops rich and smarter applications for iPhone and Android platforms using iBeacon and Bluetooth low energy technologies.</string>
    <string name="strCompanyWebUrl">www.bluepixeltech.in</string>
    <string name="strOurTeam">OUR TEAM</string>
    <string name="linkedin_himen">https://in.linkedin.com/in/himen-patel-a6077923</string>
    <string name="linkedin_rushabh">https://in.linkedin.com/in/rushabh-champaneri-7b9bb328</string>
    <string name="linkedin_rakesh">https://in.linkedin.com/in/rakesh-jiyani-70a7b218</string>
    <string name="linkedin_ashok">https://in.linkedin.com/in/ashok-domadiya-a6363837</string>
    <string name="bluepixel_facebook">https://www.facebook.com/blescanner/</string>
    <string name="bluepixel_googleplus">https://plus.google.com/110265500557190571461/about</string>
    <string name="bluepixel_web">http://www.bluepixeltech.in</string>
    <string name="bluepixel_twitter">https://twitter.com/blescanner</string>
    <string name="strtextwrite">For ex. \"test\"</string>
    <string name="strbytearrwrite">For ex. 3,4,11,9 should write as 03041109.</string>
    <string name="strcontinousmodeoffmsg">Some manufacturer devices like samsung, htc etc notify about connectable peripheral only once per scan. With continuous scan enabled scanner will stop and start scanning again every 2 seconds to get RSSI value from those devices.</string>
    <string name="strContactus">Contact us</string>
    <string name="strHartrate">heart rate</string>
    <string name="strAddCharacteristic">Add Characteristic</string>
    <string name="strAboutDevice">About Device</string>
    <string name="strHardware">Hardware</string>
    <string name="strLG_NEXUS_5">LG NEXUS 5</string>
    <string name="strAndroidVersion">Android Version</string>
    <string name="strManufacturer">Manufacturer</string>
    <string name="strLGE">LGE</string>
    <string name="strModel">Model</string>
    <string name="strBrand">Brand</string>
    <string name="strGoogle">Google</string>
    <string name="strhammerhead">hammerhead</string>
    <string name="strProduct">Product</string>
    <string name="strBluetoothSmart">Bluetooth Smart</string>
    <string name="strBluetoothSmartsupported">Bluetooth Smart supported</string>
    <string name="strYES">YES</string>
    <string name="strPeripheralmodesupported">Peripheral mode supported</string>
    <string name="strScreen">Screen</string>
    <string name="strResolution">Resolution</string>
    <string name="strDimensions_px">Dimensions (px)</string>
    <string name="strDimensions_dip">Dimensions (dip)</string>
    <string name="strSize">Size</string>
    <string name="strNormal">Normal</string>
    <string name="strWriteValue">Write Value</string>
    <string name="strCancel">Cancel</string>
    <string name="strOK">OK</string>
    <string name="strLogicalName">Logical Name</string>
    <string name="strLogical_Name">Logical Name:</string>
    <string name="strNEW">NEW</string>
    <string name="strLOAD">LOAD</string>
    <string name="strSave">Save</string>
    <string name="strFAQ">FAQ</string>
    <string name="strNew_Value">Enter alias name</string>
    <string name="strName">Name</string>
    <string name="strFeedback">Feedback</string>
    <string name="strENTER_NAME">ENTER NAME</string>
    <string name="strENTER_EMAIL">ENTER E-MAIL</string>
    <string name="strEnter_you_email">Enter you email</string>
    <string name="strFEEDBACK">FEEDBACK</string>
    <string name="strEnter_yourname">Enter your name</string>
    <string name="strProvide_your_feedback">Provide your feedback</string>
    <string name="str" />
    <string name="strFilter">Filter</string>
    <string name="strBYNAME">BY NAME</string>
    <string name="strBY_MAC_ADDRESS">BY MAC ADDRESS</string>
    <string name="strBY_RSSI">BY RSSI</string>
    <string name="strAPPLY_FILTER">APPLY FILTER</string>
    <string name="strEG_FITNESS_TRACKER">E.G. FITNESS TRACKER</string>
    <string name="strFilter_by_name_address">Filter by name or address</string>
    <string name="strRSSI">RSSI</string>
    <string name="strFilter_by">Filter by</string>
    <string name="strExport_Data">Export Data</string>
    <string name="strHimen">Himen</string>
    <string name="strThis_peripheral_fragment">This is peripheral fragment</string>
    <string name="strThis_Scanner_fragment">This is Scanner fragment</string>
    <string name="strThis_Settings_fragment">This is Settings fragment</string>
    <string name="strThis_Transmitter_fragment">This is Transmitter fragment</string>
    <string name="strGet_Started">Get Started</string>
    <string name="strScanning_time">Scanning time (in Sec)</string>
    <string name="strSec">Sec</string>
    <string name="strSet">Set</string>
    <string name="str_UUID">UUID:</string>
    <string name="str_Properties">Properties:</string>
    <string name="strValue">Value:</string>
    <string name="strHex">Hex:</string>
    <string name="strWrite_Type">Write Type:</string>
    <string name="strDescriptors">Descriptors:</string>
    <string name="strhello">hello</string>
    <string name="strCONNECT">CONNECT</string>
    <string name="strDISCONNECT">DISCONNECT</string>
    <string name="strStatus">Status:</string>
    <string name="strNOT_BONDED">NOT BONDED</string>
    <string name="strSettings">Settings</string>
    <string name="strContinuous_Scan">Continuous Scan</string>
    <string name="strManual_Scan">Manual Scan</string>
    <string name="strAlias">Alias:</string>
    <string name="strAdded">Added:</string>
    <string name="strLast_seen">Last seen:</string>
    <string name="strCopied_clipboard">Copied to clipboard</string>
    <string name="strBONDED">BONDED</string>
    <string name="strProvide_valid_logical">Please provide valid logical name</string>
    <string name="strdelete_virtual_device">Are you sure you want to delete virtual device ?</string>
    <string name="str_Value1">Value:</string>
    <string name="strPlease_connect_device">Please connect device</string>
    <string name="strLength">Length</string>
    <string name="strPattern">Pattern</string>
    <string name="strbytearray">bytearray</string>
    <string name="strprovide_valid_byte_array">Please provide valid byte array</string>
    <string name="strCUSTOM_SERVICE">CUSTOM SERVICE</string>
    <string name="strNotifications_indications_disabled">Notifications or indications disabled</string>
    <string name="strNotifications_indications_enabled">Notifications or indications enabled</string>
    <string name="strNotify">Notify</string>
    <string name="strwant_delete_Characteristic">Are you sure you want to delete Characteristic ?</string>
    <string name="strwant_delete_service">Are you sure you want to delete service ?</string>
    <string name="strNeedsupport">Need support</string>
    <string name="strAboutUsScreen_Contactus_click">AboutUsScreen Contact us click</string>
    <string name="strsupport_bluepixeltech">support@bluepixeltech.in</string>
    <string name="strSend_Email">Send Email</string>
    <string name="strmailto">mailto</string>
    <string name="strAddedSuccessfully">Added Successfully</string>
    <string name="strUpdatedSuccessfully">Updated Successfully</string>
    <string name="strprovide_valid_Charactersticname">Please provide valid Characterstic name</string>
    <string name="strCheck_Read_Write_Notify_characterstic">Check(Read, Write, Notify) at least one property of characterstic</string>
    <string name="strPlease_provide_valid_Servicename">Please provide valid Service name</string>
    <string name="str_service_Name">serviceName</string>
    <string name="str_service_UUID">serviceUUID</string>
    <string name="strPlease_provide_valid_ServiceUUID">Please provide valid Service UUID</string>
    <string name="strStart">Start</string>
    <string name="strEnd">End</string>
    <string name="strNO">NO</string>
    <string name="strDeviceInformation">Device Information</string>
    <string name="strSend_email">Send email</string>
    <string name="strProvide_name">Please provide your name</string>
    <string name="strProvide_email">Please provide your Email</string>
    <string name="strProvide_feedback">Please provide your feedback</string>
    <string name="strProvide_crct_email">Please enter correct Email</string>
    <string name="strPleaseProvideName">Please Provide Name</string>
    <string name="strPleaseProvideMacAddress">Please Provide Mac Address</string>
    <string name="strFilterapplied">Filter applied</string>
    <string name="strfilterbyName">filterbyName</string>
    <string name="strfilterbyAddress">filterbyAddress</string>
    <string name="strScanning_stop">Scanning stop</string>
    <string name="strBLE_Scanner_History_Log">,BLE Scanner History Log,</string>
    <string name="str_CONNECTING">CONNECTING...</string>
    <string name="str__CONNECTED">CONNECTED</string>
    <string name="str__DISCONNECTED">DISCONNECTED</string>
    <string name="strDISCOVERING_SERVICES">DISCOVERING SERVICES...</string>
    <string name="strPRIMARYSERVICE">PRIMARY SERVICE</string>
    <string name="strSECONDARYSERVICE">SECONDARY SERVICE</string>
    <string name="str__READ">READ</string>
    <string name="str__WRITE">WRITE</string>
    <string name="str__NOTIFY">NOTIFY</string>
    <string name="str__INDICATE">INDICATE</string>
    <string name="str__WRITE_NO_RESPONSE">WRITE_NO_RESPONSE</string>
    <string name="str_WRITE_REQUEST">WRITE REQUEST</string>
    <string name="str_Sec">Sec</string>
    <string name="str_read">read</string>
</resources>