<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/homeactivity_rel_top_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/themecolor">

                <ImageView
                    android:id="@+id/homeactivity_img_menu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/menu" />

                <ImageView
                    android:id="@+id/homeactivity_img_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/scan_animation"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/homeactivity_txt_Appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/homeactivity_lin_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/themecolor"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="5">

                <LinearLayout
                    android:id="@+id/homeactivity_lin_bottom_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/home_bg_selected"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_bottom_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/homeactivity_txt_bottom_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/homeactivity_lin_bottom_peripheral"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/home_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_bottom_peripheral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/homeactivity_txt_bottom_peripheral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/peripheral"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/homeactivity_lin_bottom_scanner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/home_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_bottom_scanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/homeactivity_txt_bottom_scanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/scanner"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/homeactivity_lin_bottom_transmitter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/home_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_bottom_transmitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/homeactivity_txt_bottom_transmitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/transmitter"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/homeactivity_lin_bottom_settings"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/home_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_bottom_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/homeactivity_txt_bottom_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/homeactivity_rel_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/homeactivity_lin_bottom"
                android:layout_below="@+id/homeactivity_rel_top_title">

                <RelativeLayout
                    android:id="@+id/homeactivity_rel_nodevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/homeactivity_img_nodevicefound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/scan_animation_for_nodevice"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/homeactivity_txt_nodevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/homeactivity_img_nodevicefound"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/strNo_nearby_BLE"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:visibility="visible" />
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/homeactivity_lin_slidingLin"
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:alpha="0.9"
        android:background="@drawable/menu_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeactivity_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:id="@+id/homeactivity_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/homeactivity_txt_name"
            android:layout_marginTop="20dp"
            android:background="#30ffffff" />

        <ListView
            android:id="@+id/homeactivity_list_draweroptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/homeactivity_lin_bottom_version"
            android:layout_below="@+id/homeactivity_view"
            android:divider="#30ffffff"
            android:dividerHeight="1px"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:id="@+id/homeactivity_lin_bottom_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/homeactivity_txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/strVersion"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/homeactivity_view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="#30ffffff" />

            <LinearLayout
                android:id="@+id/homeactivity_lin_bottom_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:src="@drawable/icnfacebook" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:src="@drawable/icntwitter" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:src="@drawable/icngoogle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeactivity_img_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:src="@drawable/icnwebsite" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
